# codex

./: CMakeLists.txt  Doxyfile  Makefile.am  README.md  configure.ac  shell.nix
algo/: Makefile.am  README.md  rotate.hpp  test.cpp  test.hpp
arithmetic_folding/: CMakeLists.txt  Makefile.am  README.md  rotate.cpp  rotate.hpp  rotate_test.cpp  rotate_test.hpp
base64/: CMakeLists.txt  Makefile.am  README.md  base64.cpp  base64.hpp  block.hpp  cmd.hpp  main.cpp  test.sh
base64/bench/: bench.cpp  bench.hpp  bench.py
base64/bench/system/: base64
base64/rfc/: README  adaptor.hpp  base64.c  main.cpp
base64/test/: common.hpp  test.cpp  test.hpp
bench/: bench.cpp  bench.hpp
bit_pattern/: CMakeLists.txt  Makefile.am  README.md  bit_pattern.hpp  bit_pattern_test.cpp  bit_pattern_test.hpp
bsearch/: Makefile.am  bench.cpp  bench.hpp  bsearch.h  bsearch.hpp  test.cpp  test.hpp
c_wrapper/: CMakeLists.txt  Makefile.am  README.md  c_wrapper.cpp  c_wrapper.hpp  c_wrapper_test.cpp  c_wrapper_test.hpp
cpp/lua/: README.md  cpp.lua
cpp/lua/lib/: fn.lua  lexer.lua  obj.lua  output.lua  parser.lua  span.lua  stack.lua  utils.lua
cpp/lua/tests/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  argc.c  gcc10.c  gcc11.c  gcc12.c  gcc13.c  gcc14.c  gcc15.c  gcc16.c  gcc17.c  gcc19.c  gcc20.c  gcc21.c  gcc22.c  gcc3.c  gcc4.c  gcc5.c  gcc6.c  gcc7.c  gcc8.c  gcc9.c  std0.c  std1.c  std2.c  std3.c  std4.c  std5.c  test.sh  x.c
cpp/lua/tests/expected/: 3.c  5.c  expected.sh  gcc0.c  gcc10.c  gcc11.c  gcc12.c  gcc14.c  gcc16.c  gcc17.c  gcc19.c  gcc20.c  gcc21.c  gcc22.c  gcc3.c  gcc4.c  gcc5.c  gcc7.c  gcc8.c  gcc9.c  std0.c  std2.c  std3.c  std4.c  x.c
event_dispatcher/: CMakeLists.txt  Makefile.am  README.md  event_dispatcher.hpp  event_dispatcher_test.cpp  event_dispatcher_test.hpp
git/rebase/: exec.cpp  main.cpp
lambda/: CMakeLists.txt  Makefile.am  README.md  mutable.hpp  mutable_test.cpp  mutable_test.hpp
list/: Makefile.am  list.h  test.cpp  test.hpp
loop/: Makefile.am  loop.c
math/: Makefile.am  power.hpp  power_test.cpp  power_test.hpp
packet_reader/: CMakeLists.txt  Makefile.am  README.md  packet_reader.cpp  packet_reader.hpp  packet_reader_test.cpp  packet_reader_test.hpp
popcount/: Makefile.am  bench.cpp  bench.hpp  popcount.h  test.cpp  test.hpp
q/: assert_equal.c  atomic_writer.txt  reflexpr.cpp  storage_switch.cpp  wrap.cpp
q/coroutines/: coroutines.cpp
q/git/rebase/: Makefile  exec.hpp  main.cpp  rebase.txt
q/io_uring/: io_uring.c
q/log/: main.cpp
q/lua/: Makefile  gen.hpp  lexer.hpp  lua.hpp  parser.hpp  print.hpp  reader.hpp  test.cpp  test.lua  utils.hpp
q/ooc/: Makefile  ooc.c
q/qsort/: qsort.cpp
q/string/: string.hpp  string_bench.cpp  string_bench.hpp
reflection/: Makefile.am  README.md  fields.hpp  soa.cpp  soa.hpp  utils.hpp
reflection/detail/: fields.cpp  fields.hpp  soa.cpp  soa.hpp
sort/: Makefile.am  insertion.cpp  insertion.hpp  selection.cpp  selection.hpp  test.cpp  test.hpp
test/: common.hpp
tex/: Makefile  bib.tex  chapters.tex  codex.bib  codex.tex  codex_fast.tex  def.tex  listings.tex  tikz.tex  title.tex
tex/algo/: bsearch.c  bsearch.tex  bsearch0.tex  bsearch1.tex  comp_graph.tex  complexity.tex  fundamentals.tex  lower_bound.c  math.tex  range.tex  sort.tex  upper_bound.c
tex/algo/fundamentals/: utils.h  utils.hpp
tex/algo/sort/: quick.cpp  quick.tex  selection.cpp  selection.tex
tex/arch/: asm.tex  bit.tex  elect.tex  float.tex  integers.tex  latches.tex  memory.tex  virtual_memory.tex
tex/arch/bit/: bit.cpp  popcnt.cpp  popcnt_bin.tex
tex/arch/elect/: trans.tex  trans_and0.tex  trans_and1.tex  trans_and2.tex  trans_and3.tex  trans_or0.tex  trans_or1.tex  trans_or2.tex  trans_or3.tex
tex/arch/float/: float.cpp
tex/arch/integers/: adder.tex  half_adder.tex  half_subtractor.tex  mul.tex  overflow_flag.tex  subtractor.tex
tex/arch/latches/: d_latch.tex  flip_flop0.tex  flip_flop1.tex  flip_flop2.tex  flip_flop3.tex  flip_flop4.tex  flip_flop5.tex  flip_flop6.tex  flip_flop7.tex  or_loop0.tex  or_loop1.tex  or_loop2.tex  or_loop3.tex
tex/c/: cpp.tex  decl.tex  exp.tex  ub.tex
tex/concurrency/: amdahl.tex  atomic.tex  cache_coherence.tex  cases.tex  memory_consistency.tex  queue_atomic.c  queue_cas.c  queue_mtx.c  queue_ring_and.c  queue_ring_mod.c  queue_spsc0.c  queue_spsc1.c  queue_st.c  rcu.tex  semaphores.tex
tex/cpp/: lobject.h  meta.tex  mult_inh.c  mult_opt.c  oop.tex  tmp.tex
tex/sol/: chess0.c  chess1.c  chess_common.h  sol.tex
tex/sol/struct/: list_remove0.tex  list_remove1.tex
tex/struct/: alloc.tex  hash.tex  list.tex  ref.tex  tree.tex
tex/struct/alloc/: dedicated.c  embedded.c  header.c
tex/struct/list/: ops.c
tex/unix/: linux.tex
thread/: CMakeLists.txt  Makefile.am  bench.cpp  bench.hpp  common.h  test.cpp  test.hpp  thread.h  thread0.c  thread0.h  thread1.c  thread1.h  thread2.c  thread2.h  thread3.c  thread3.h  thread4.c  thread4.h
time/: Makefile.am  README.md  table.c  table_test.txt  time.c
util/: def.h  util.hpp
yaml/: Makefile.am  json.c  main.c  text.c  yaml.c  yaml.h
yaml/test/: ytoj.sh  ytoj.yaml
